tests/suite/fail/regression/reg_move_11.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "r11"
    take(s)
    print(s) //~ ERROR was moved
}
